@@ -50,4 +50,5 @@ Changes in version 1.5.x
 + Added sample metadata option to getExperimentCrossAssociation
 + estimateFaith: add support for multiple rowTrees
 + calculateRDA/CCA: added variable argument & replaced altexp argument with altExp
++ getExpCrossCorr: bugfix; samples should match when correlations between features are calculated
 
